<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Facom Play</string>
    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="configuraces">Configurações</string>
    <string name="musicas_favoritas">Músicas favoritas</string>
    <string name="textview">TextView</string>
    <string name="_4">4</string>
    <string name="seguidores">SEGUIDORES</string>
    <string name="seguindo">SEGUINDO</string>
    <string name="facom_play">Facom Play</string>
    <string name="facom_logo">Facom logo</string>
    <string name="nego_drama">Nego Drama</string>
    <string name="racionais_mcs">Racionais MCs</string>
    <string name="foto_de_perfil">foto de perfil</string>
    <string name="usuario_comum">Usuário comum</string>
    <string name="clique_me">Clique-me!</string>
    <string name="ativar_modo_escuro">ATIVAR MODO ESCURO</string>
    <string name="ativar_modo_claro">ATIVAR MODO CLARO</string>


    <string-array name="nome_cantores">
        <item>Racionais MCs</item>
        <item>Marcelo D2</item>
        <item>Sabotage</item>
        <item>Dexter</item>
        <item>Rincon Sapiência</item>
        <item>Black Alien</item>
        <item>TropKillaz</item>
        <item>Djonga</item>
        <item>Trilha Sonora do Gueto</item>
        <item>Froid</item>
        <item>Skank</item>
        <item>The Weeknd</item>
        <item>Tyler, The Creator</item>
        <item>Alok</item>
        <item>Thiaguinho</item>
    </string-array>

    <string-array name="nome_musicas">
        <item>Nego Drama</item>
        <item>Desabafo / Deixa eu Dizer</item>
        <item>Mun Rá</item>
        <item>Oitavo Anjo</item>
        <item>Ponta de Lança (Verso Livre)</item>
        <item>Vai Baby</item>
        <item>Oooh! (I Like It)!</item>
        <item>LEAL</item>
        <item>Favela Sinistra</item>
        <item>Pseudosocial</item>
        <item>Ainda Gosto Dela</item>
        <item>Blinding Lights</item>
        <item>EARFQUAKE</item>
        <item>Fuego</item>
        <item>Buquê De Flores - Ao Vivo</item>
    </string-array>


    <string-array name="idiomas">
        <item>Escolha o idioma</item>
        <item>Português - Br</item>
        <item>English - US</item>
        <item>Español - Es</item>
    </string-array>


</resources>